# code-index

./: .gitignore  README.md  SKILL.md  report_content.md
scripts/: Makefile  install.sh  pyproject.toml
scripts/code_index/: __init__.py
scripts/code_index.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/code_index/cli/: __init__.py  build.py  callees.py  callers.py  daemon.py  impls.py  outline.py  query.py  status.py
scripts/code_index/core/: __init__.py  incremental.py  indexer.py  model.py  query_engine.py  resolver.py  vfs_generator.py
scripts/code_index/grammars/: __init__.py  build.py
scripts/code_index/parsers/: __init__.py  base.py  registry.py
scripts/code_index/parsers/java/: parser.py
scripts/code_index/parsers/java/queries/: calls.scm  symbols.scm
scripts/code_index/parsers/kotlin/: parser.py
scripts/code_index/parsers/kotlin/queries/: calls.scm  symbols.scm
scripts/code_index/parsers/objc/: parser.py
scripts/code_index/parsers/objc/queries/: calls.scm  symbols.scm
scripts/code_index/parsers/swift/: parser.py
scripts/code_index/parsers/swift/queries/: calls.scm  (+1 more)
scripts/code_index/parsers/typescript/: parser.py
scripts/tests/: conftest.py  test_integration.py  test_model.py  test_query_engine.py  test_resolver.py
scripts/tests/fixtures/java/: sample_class.java
scripts/tests/fixtures/kotlin/: sample_class.kt  service_b.kt
scripts/tests/fixtures/objc/: sample_class.m
scripts/tests/fixtures/swift/: sample_class.swift
scripts/tests/fixtures/typescript/: sample_component.tsx
(+2 files in other folders)
